Replace layout issue on BpkModal with a different one

--- a/packages/bpk-component-modal/src/BpkModalDialog.scss
+++ b/packages/bpk-component-modal/src/BpkModalDialog.scss
@@ -73,14 +73,11 @@
 
   &__header {
     @include bpk-border-bottom-sm($bpk-color-sky-gray-tint-06);
-
-    &--title-only {
-      display: flex;
-      justify-content: space-between;
-    }
   }
 
   &__navigation {
+    display: flex;
+    justify-content: space-between;
     background-color: $bpk-modal-background-color;
   }
 
@@ -91,10 +88,24 @@
   }
 
   &__close-button {
-    float: right;
+    position: relative; // Override position: absolute coming from BpkNavigationBar
+    right: auto;
+    margin-left: $bpk-spacing-sm;
 
     @include bpk-rtl {
-      float: left;
+      left: auto;
+      margin-right: $bpk-spacing-sm;
+    }
+  }
+
+  &__accessory-view {
+    position: relative; // Override position: absolute coming from BpkNavigationBar
+    left: auto;
+    margin-right: $bpk-spacing-sm;
+
+    @include bpk-rtl {
+      right: auto;
+      margin-left: $bpk-spacing-sm;
     }
   }
 
